--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "ink": "^6.0.1",
+    "p-limit": "^6.2.0",
     "path": "^0.12.7",
     "react": "^19.1.0",
     "tsx": "^4.20.3"
