--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "path": "^0.12.7",
     "react": "^19.1.0",
     "redis": "^5.6.0",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "zustand": "^5.0.6"
   }
 }
