--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "packageManager": "pnpm@10.11.0",
   "type": "module",
   "dependencies": {
+    "discord.js": "^14.21.0",
+    "dotenv": "^17.2.0",
     "fs": "0.0.1-security",
     "ink": "^6.0.1",
     "p-limit": "^6.2.0",
