--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "packageManager": "pnpm@10.11.0",
   "type": "module",
   "dependencies": {
+    "@prisma/client": "^6.12.0",
     "cli-color": "^2.0.4",
     "cli-progress": "^3.12.0",
     "discord.js": "^14.21.0",
@@ -20,6 +21,7 @@
     "ink": "^6.0.1",
     "p-limit": "^6.2.0",
     "path": "^0.12.7",
+    "prisma": "^6.12.0",
     "react": "^19.1.0",
     "redis": "^5.6.0",
     "tsx": "^4.20.3",
