--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@prisma/client": "^6.12.0",
     "cli-color": "^2.0.4",
     "cli-progress": "^3.12.0",
+    "cors": "^2.8.5",
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.0",
+    "express": "^5.1.0",
     "fs": "0.0.1-security",
     "ink": "^6.0.1",
     "p-limit": "^6.2.0",
