--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "fs": "0.0.1-security",
     "ink": "^6.0.1",
     "p-limit": "^6.2.0",
@@ -27,6 +28,7 @@
     "prisma": "^6.12.0",
     "react": "^19.1.0",
     "redis": "^5.6.0",
+    "sharp": "^0.34.3",
     "tsx": "^4.20.3",
     "winston": "^3.17.0",
     "zustand": "^5.0.6"
