--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node src/app.js",
-    "dev-nodl": "node src/app.js --nodl"
+    "dev-nodl": "node src/app.js --nodl",
+    "dev-storage": "node src/storage-server.js"
   },
   "keywords": [],
   "author": "",
