--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "axios": "^1.11.0",
     "cli-color": "^2.0.4",
     "cli-progress": "^3.12.0",
     "cors": "^2.8.5",
