:zap: Increased coomer api call delays

--- a/.env.dist
+++ b/.env.dist
@@ -2,3 +2,9 @@ DISCORD_TOKEN=""
 REDIS_URL=""
 DATABASE_URL=""
 API_PORT=3000
+
+STORAGE_V_API_HOST="{HTTP_S_HOST}/api"
+STORAGE_V_NAME="storage name"
+STORAGE_V_HOST="storage host"
+STORAGE_V_PORT=41500
+STORAGE_V_PATH="storage absolute data path"
