--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@prisma/client": "^6.12.0",
     "axios": "^1.11.0",
+    "check-disk-space": "^3.4.0",
     "cli-color": "^2.0.4",
     "cli-progress": "^3.12.0",
     "cors": "^2.8.5",
