chore: save current scraper state before terminal progress refactor

--- a/.env.dist
+++ b/.env.dist
@@ -2,9 +2,58 @@ DISCORD_TOKEN=""
 REDIS_URL=""
 DATABASE_URL=""
 API_PORT=3000
+DOWNLOAD_DIR="D:/app/cs-v2"
 
-STORAGE_V_API_HOST="{HTTP_S_HOST}/api"
-STORAGE_V_NAME="storage name"
-STORAGE_V_HOST="storage host"
-STORAGE_V_PORT=41500
-STORAGE_V_PATH="storage absolute data path"
+
+# ============================================================
+# MULTI-PROXY CONFIGURATION
+# ============================================================
+# Each proxy (including localhost) operates independently with
+# its own concurrency limits for posts and attachments.
+
+# Concurrency Limits (per proxy)
+# PROXY_POST_LIMIT: Maximum concurrent posts processed per proxy (default: 2)
+# PROXY_ATTACHMENT_LIMIT: Maximum concurrent attachments downloaded per post per proxy (default: 4)
+PROXY_POST_LIMIT=2
+PROXY_ATTACHMENT_LIMIT=4
+
+# Download Settings
+# PROXY_DOWNLOAD_TIMEOUT: Timeout per download in milliseconds (default: 600000 = 10 minutes)
+PROXY_DOWNLOAD_TIMEOUT=600000
+
+# PROXY_MAX_REDIRECTS: Maximum HTTP redirects allowed per download (default: 1)
+PROXY_MAX_REDIRECTS=1
+
+# PROXY_SKIP_CACHE_TTL: Time-to-live for skip cache in seconds (default: 3600 = 1 hour)
+# Failed downloads are marked in Redis for this duration before retry
+PROXY_SKIP_CACHE_TTL=3600
+
+# Retry Configuration
+# PROXY_MAX_RETRIES: Maximum retry attempts per download (default: 3)
+PROXY_MAX_RETRIES=3
+
+# PROXY_RETRY_BACKOFF: Exponential backoff multiplier for retries (default: 2)
+# Delay formula: baseDelay * (backoff ^ attemptCount)
+PROXY_RETRY_BACKOFF=2
+
+# PROXY_RETRY_BASE_DELAY: Initial retry delay in milliseconds (default: 1000 = 1 second)
+PROXY_RETRY_BASE_DELAY=1000
+
+# Proxy List Configuration
+# Format: JSON array of proxy configurations
+#
+# Local/Direct Download:
+#   { "isLocalhost": true }
+#
+# HTTP/HTTPS Proxy with optional credentials:
+#   { "ip": "proxy1.example.com", "port": 3128 }
+#   { "ip": "proxy2.example.com", "port": 3128, "username": "user", "password": "pass" }
+#
+# Example (Single localhost proxy):
+#   [{"isLocalhost":true}]
+#
+# Example (Localhost + 2 remote proxies):
+#   [{"isLocalhost":true},{"ip":"proxy1.com","port":3128},{"ip":"proxy2.com","port":3128,"username":"user","password":"pass"}]
+#
+# Default: Localhost only if not specified
+PROXY_LIST=
